:recycle: Alterado valores do package.json

--- a/package.json
+++ b/package.json
@@ -14,8 +14,8 @@
     "url": "git+https://github.com/ogustaflor/lerolero-bot.git"
   },
   "keywords": [],
-  "author": "",
-  "license": "ISC",
+  "author": "Gustavo Flôr",
+  "license": "MIT",
   "bugs": {
     "url": "https://github.com/ogustaflor/lerolero-bot/issues"
   },
