--- a/package.json
+++ b/package.json
@@ -2,12 +2,12 @@
   "name": "lerolero-bot",
   "version": "1.0.0",
   "description": "",
-  "main": "dist/app.js",
+  "main": "dist/index.js",
   "type": "commonjs",
   "scripts": {
-    "start:dev": "ts-node-dev --transpile-only --ignore-watch node_modules src/app.ts",
+    "start:dev": "ts-node-dev --transpile-only --ignore-watch node_modules src/index.ts",
     "build": "rimraf ./dist && npx tsc",
-    "start": "npm run build && node ./dist/app.js"
+    "start": "npm run build && node ./dist/index.js"
   },
   "repository": {
     "type": "git",
@@ -22,12 +22,10 @@
   "homepage": "https://github.com/ogustaflor/lerolero-bot#readme",
   "devDependencies": {
     "@types/node": "^14.14.22",
-    "@types/puppeteer": "^5.4.2",
     "@types/twitter": "^1.7.0",
     "ts-node-dev": "^1.1.1"
   },
   "dependencies": {
-    "puppeteer": "^5.5.0",
     "rimraf": "^3.0.2",
     "typescript": "^4.1.3",
     "twitter": "^1.7.1"
