--- a/package.json
+++ b/package.json
@@ -26,8 +26,9 @@
   "dependencies": {
     "@types/node": "^14.14.22",
     "@types/twitter": "^1.7.0",
+    "dotenv": "^8.2.0",
     "rimraf": "^3.0.2",
-    "typescript": "^4.1.3",
-    "twitter": "^1.7.1"
+    "twitter": "^1.7.1",
+    "typescript": "^4.1.3"
   }
 }
