--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "scripts": {
     "start:dev": "ts-node-dev --transpile-only --ignore-watch node_modules src/index.ts",
     "build": "rimraf ./dist && npx tsc",
-    "start": "npm run build && node ./dist/index.js"
+    "deploy": "node ./dist/index.js",
+    "start": "npm run build && npm run deploy"
   },
   "repository": {
     "type": "git",
